--- a/Project.toml
+++ b/Project.toml
@@ -2,31 +2,31 @@ name = "PowerModelsACDC"
 uuid = "ff45984e-d068-5f4c-9e32-c4133509d236"
 autors = ["Hakan Ergun", "Frederik Geth", "Jay Dave"]
 repo = "https://github.com/hakanergun/PowerModelsACDC.jl"
-version = "0.3.2"
+version = "0.3.3"
 
 [deps]
-Cbc = "9961bab8-2fa3-5c5a-9d89-47fab24efd76"
 InfrastructureModels = "2030c09a-7f63-5d83-885d-db604e0e9cc0"
-Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
-Juniper = "2ddba703-00a4-53a7-87a5-e8b9971dde84"
 Memento = "f28f55f0-a522-5efc-85c2-fe41dfb9b2d9"
 PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
-SCS = "c946c3f1-0d1f-5ce8-9dea-7daa1f7e2d13"
 
 [compat]
-Cbc = "~0.4.0, ~0.5, =0.6.0, =0.6.1, =0.6.2, =0.6.3, =0.6.4, =0.6.5, =0.6.6, =0.6.7"
-InfrastructureModels = "=0.5.3"
-Ipopt = "~0.4.0, ~0.5, =0.6.0, =0.6.1"
-JuMP = "~0.19.1, ~0.21.0"
-Juniper = "=0.6.3"
-Memento = "~0.10.0, ~0.12.0, ~1.0.0"
-PowerModels = "=0.17.2"
-SCS = "~0.4.0, ~0.5, =0.6.0, =0.6.1, =0.6.2, =0.6.3, =0.6.4, =0.6.5, =0.6.6"
-julia = "^1.1.0"
+Cbc = ">= 0.6"
+InfrastructureModels = "~0.5"
+Ipopt = ">= 0.6"
+JuMP = "~0.19.1, ~0.20, ~0.21.0"
+Juniper = ">= 0.6"
+Memento = "~0.10, ~0.11, ~0.12, ~0.13, ~1.0, ~1.1"
+PowerModels = "~0.17"
+SCS = ">= 0.6"
+julia = "^1"
 
 [extras]
+Cbc = "9961bab8-2fa3-5c5a-9d89-47fab24efd76"
+Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
+Juniper = "2ddba703-00a4-53a7-87a5-e8b9971dde84"
+SCS = "c946c3f1-0d1f-5ce8-9dea-7daa1f7e2d13"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test"]
+test = ["Test", "Ipopt", "SCS", "Cbc", "Juniper"]
