--- a/Project.toml
+++ b/Project.toml
@@ -11,7 +11,7 @@ Memento = "f28f55f0-a522-5efc-85c2-fe41dfb9b2d9"
 PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
 
 [compat]
-Cbc = ">= 0.6"
+Cbc = "=0.7.0"
 InfrastructureModels = "~0.5"
 Ipopt = ">= 0.6"
 JuMP = "~0.19.1, ~0.20, =0.21.3"
